--- a/gzbxnew/src/main/res/values/strings.xml
+++ b/gzbxnew/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">gzbxnew</string>
+    <string name="uploadUrlHq">http://192.168.3.136:8080/stargate/</string>
 </resources>
