--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,13 @@
 <resources>
     <string name="app_name">i常卫</string>
 
-    <!--本地环境-->
-    <string name="rootUrl">http://192.168.3.163:8071/mp-czwx/</string>
-    <!--现场环境
-    <string name="rootUrl">http://mobile.tsyl.cn/</string>-->
+    <!--本地环境
+    <string name="rootUrl">http://192.168.3.163:8071/mp-czwx/</string>-->
+    <!--现场环境-->
+    <string name="rootUrl">http://mobile.tsyl.cn/</string>
     <!--<string name="uploadUrlXg">http://192.168.3.221:8081/stargate/</string>-->
-    <string name="uploadUrlHq">http://192.168.1.151:9088/</string>
-    <string name="uploadUrlXg">http://192.168.1.151:9088/</string>
+    <string name="uploadUrlHq">http://hq.tsyl.cn/</string>
+    <string name="uploadUrlXg">http://xg.tsyl.cn/</string>
 
     <string name="about_copyright_cn">常州卫生高等职业技术学校版权所有</string>
     <string name="about_copyright_zn">Copyright ©2018 All Rights Reserved</string>
